--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": ">2.2.0rc1",
-        "zf-commons/zfc-user": "dev-master"
+        "zf-commons/zfc-user": "1.2.1"
     }
 }
