--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "zf-commons/zfc-user": "1.2.1",
         "zf-commons/zfc-user-doctrine-orm": "~1.0",
         "doctrine/doctrine-orm-module": "0.7.*",
-        "bjyoungblood/bjy-authorize": "1.2.*"
+        "bjyoungblood/bjy-authorize": "1.2.*",
+        "manuakasam/sam-user": "dev-master"
     }
 }
